--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@ body {
   align-items: stretch;
 }
 
+#toggleSidebar {
+            cursor: pointer;
+            padding: 15px;
+            background-color: #fff;
+            margin-top: -15px;
+            border: solid 1px #fff;
+            border-radius: 0px 15px 15px 0px;
+}
+
 .sidebar {
   position: absolute;
   top: 0;
