--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 
 #toggleSidebar {
             cursor: pointer;
-            padding: 15px;
+            padding: 12px;
             background-color: #fff;
             margin-top: -15px;
             border: solid 1px #fff;
@@ -59,7 +59,7 @@ body {
 .nav-tabs{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
 }
 .dayTab>{
   margin: 5px 0px 5px 0px;
@@ -151,4 +151,8 @@ label {
   background-color: #fff;
   -moz-transition: left 0.5s ease;
   transition: left 0.5s ease;
+}
+
+.input-group{
+  padding-bottom: 10px;
 }
