--- a/css/preloader.css
+++ b/css/preloader.css
@@ -8,83 +8,68 @@
   z-index: 5000;
 }
 
-.scene {
+.loader {
+  position: absolute;
+  top: calc(50% - 32px);
+  left: calc(50% - 32px);
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  perspective: 800px;
+}
+
+.inner {
+  position: absolute;
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
-  -webkit-perspective: 600;
-  perspective: 600;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  border-radius: 50%;
 }
 
-.scene svg {
-  width: 240px;
-  height: 240px;
+.inner.one {
+  left: 0%;
+  top: 0%;
+  animation: rotate-one 1s linear infinite;
+  border-bottom: 3px solid #EFEFFA;
 }
 
-.dc-logo {
-  position: fixed;
-  right: 10px;
-  bottom: 10px;
+.inner.two {
+  right: 0%;
+  top: 0%;
+  animation: rotate-two 1s linear infinite;
+  border-right: 3px solid #EFEFFA;
 }
 
-.dc-logo:hover svg {
-  -webkit-transform-origin: 50% 50%;
-  transform-origin: 50% 50%;
-  -webkit-animation: arrow-spin 2.5s 0s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
-  animation: arrow-spin 2.5s 0s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+.inner.three {
+  right: 0%;
+  bottom: 0%;
+  animation: rotate-three 1s linear infinite;
+  border-top: 3px solid #EFEFFA;
 }
 
-.dc-logo:hover:hover:before {
-  content: '\2764';
-  padding: 6px;
-  font: 10px/1 Monaco, sans-serif;
-  font-size: 10px;
-  color: #00fffe;
-  text-transform: uppercase;
-  position: absolute;
-  left: -70px;
-  top: -30px;
-  white-space: nowrap;
-  z-index: 20px;
-  box-shadow: 0px 0px 4px #222;
-  background: rgba(0, 0, 0, 0.4);
-}
-
-.dc-logo:hover:hover:after {
-  content: 'Digital Craft';
-  padding: 6px;
-  font: 10px/1 Monaco, sans-serif;
-  font-size: 10px;
-  color: #6E6F71;
-  text-transform: uppercase;
-  position: absolute;
-  right: 0;
-  top: -30px;
-  white-space: nowrap;
-  z-index: 20px;
-  box-shadow: 0px 0px 4px #222;
-  background: rgba(0, 0, 0, 0.4);
-  background-image: none;
-}
-
-@-webkit-keyframes arrow-spin {
-  50% {
-    -webkit-transform: rotateY(360deg);
-    transform: rotateY(360deg);
+@keyframes rotate-one {
+  0% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
   }
 }
 
-@keyframes arrow-spin {
-  50% {
-    -webkit-transform: rotateY(360deg);
-    transform: rotateY(360deg);
+@keyframes rotate-two {
+  0% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+  }
+}
+
+@keyframes rotate-three {
+  0% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
 }
